--- a/tools.html
+++ b/tools.html
@@ -62,42 +62,42 @@
 </thead>
 <tbody class="row-hover">
        <tr>
-              <td>ADBOU</td>
+           <td><a href="http://math.mercyhurst.edu/~sousley/Software/", target="_blank">ADBOU</a></td>
               <td>Delphi</td>
               <td>Closed</td>
               <td>EULA</td>
               <td>Age</td>
           </tr>
        <tr>
-              <td>AFA3D</td>
+              <td><a href="http://projects.pacea.u-bordeaux.fr/TIVMI/index.php?page=afa3d", target="_blank">AFA3D</a></td>
               <td>R, C++</td>
               <td>Closed</td>
               <td>EULA</td>
               <td>Craniofacial</td>
           </tr>
        <tr>
-              <td>AncesTrees</td>
+           <td><a href="http://osteomics.com/", target="_blank">AncesTrees</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Ancestry</td>
           </tr>
        <tr>
-              <td>AnthroStats</td>
+           <td><a href="http://osteocoder.com/anthrostats.html", target="_blank">AnthroStats</a></td>
               <td>R</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Data Analysis</td>
           </tr>
        <tr>
-              <td>BodyPlot</td>
+              <td><a href="http://www.craniofacialidentification.com/computercode.html", target="_blank">BodyPlot</a></td>
               <td>R</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Body Proportion</td>
           </tr>
        <tr>
-              <td>CADOES</td>
+           <td><a href="http://osteomics.com/", target="_blank">CADOES</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
@@ -111,21 +111,21 @@
               <td>Comparsion</td>
           </tr>
        <tr>
-              <td>COLIPR</td>
+           <td><a href="https://www.muni.cz/vyzkum/publikace/764216", target="_blank">COLIPR</a></td>
               <td></td>
               <td>Closed</td>
               <td></td>
               <td>Sex</td>
           </tr>
        <tr>
-              <td>CoRA</td>
+           <td><a href="https://www.coracore.org/", target="_blank">CoRA</a></td>
               <td>php</td>
               <td>Open</td>
               <td>MIT</td>
               <td>Data Analysis</td>
           </tr>
        <tr>
-              <td>CRANID</td>
+              <td><a href="https://web.archive.org/web/20151123145725/http://osteoware.si.edu/forum/osteoware-communityannouncements/cranid-richard-wright-0", target="_blank">CRANID</a></td>
               <td>QB64</td>
               <td>Closed</td>
               <td>None</td>
@@ -139,175 +139,175 @@
               <td>Age</td>
           </tr>
        <tr>
-              <td>DSP</td>
+           <td><a href="http://osteomics.com/", target="_blank">DSP</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Sex</td>
           </tr>
        <tr>
-              <td>DSP2</td>
+              <td><a href="http://projects.pacea.u-bordeaux.fr/logiciel/DSP2/dsp2.html", target="_blank">DSP2</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Sex</td>
           </tr>
        <tr>
-              <td>DXAGE</td>
+           <td><a href="http://osteomics.com/", target="_blank">DXAGE</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Age</td>
           </tr>
        <tr>
-              <td>EasyECD</td>
+              <td><a href="http://www.craniofacialidentification.com/computercode.html", target="_blank">EasyECD</a></td>
               <td>R</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Craniofacial</td>
           </tr>
        <tr>
-              <td>ForAge</td>
+              <td><a href="http://morphlab.sc.fsu.edu/software/forAge/index.html", target="_blank">ForAge</a></td>
               <td>Java</td>
               <td>Open</td>
               <td>Apache version 2.0</td>
               <td>Age</td>
           </tr>
        <tr>
-              <td>Fordisc</td>
+              <td><a href="https://fac.utk.edu/fordisc-3-1-personal-computer-forensic-discriminant-functions/", target="_blank">Fordisc</a></td>
               <td>Delphi</td>
               <td>Closed</td>
               <td>EULA</td>
               <td>Sex, Ancestry, Body Proportion</td>
           </tr>
        <tr>
-              <td>Fragmento</td>
+              <td><a href="http://mmahfouz.org/fragmentary-reconstruction", target="_blank">Fragmento</a></td>
               <td>C++</td>
               <td>Closed</td>
               <td>EULA</td>
               <td>Commingled</td>
           </tr>
        <tr>
-              <td>hefneR</td>
+           <td><a href="http://osteomics.com/", target="_blank">hefneR</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Ancestry</td>
           </tr>
        <tr>
-              <td>(hu)MANid</td>
+           <td><a href="https://www.anthropologyapps.com/", target="_blank">(hu)MANid</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Ancestry, Sex</td>
           </tr>
        <tr>
-              <td>Isolocate</td>
+           <td><a href="https://www.anthropologyapps.com/", target="_blank">Isolocate</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Comparsion</td>
           </tr>
        <tr>
-              <td>KidStats</td>
+           <td><a href="https://github.com/geanes/kidstats", target="_blank">KidStats</a></td>
               <td>R</td>
               <td>Open</td>
               <td>None</td>
               <td>Age, Sex</td>
           </tr>
        <tr>
-              <td>KScollect</td>
+           <td><a href="https://github.com/geanes/KScollect", target="_blank">KScollect</a></td>
               <td>R</td>
               <td>Open</td>
               <td>None</td>
               <td>Data Analysis</td>
           </tr>
        <tr>
-              <td>MassReg</td>
+           <td><a href="http://osteomics.com", target="_blank">MassReg</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Body Proportion</td>
           </tr>
        <tr>
-              <td>MorphoPASSE</td>
+           <td><a href="http://morphopasse.com", target="_blank">MorphoPASSE</a></td>
               <td>R</td>
               <td>Closed</td>
               <td></td>
               <td>Sex</td>
           </tr>
        <tr>
-              <td>OdontoSearch</td>
+              <td><a href="http://www.odontosearch.com/en/3.2/index.html", target="_blank">OdontoSearch</a></td>
               <td>php</td>
               <td>Closed</td>
               <td>None</td>
               <td>Comparsion</td>
           </tr>
        <tr>
-              <td>Optosearch</td>
+           <td><a href="https://www.anthropologyapps.com/", target="_blank">Optosearch</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Comparsion</td>
           </tr>
        <tr>
-              <td>OsteoShiny</td>
+           <td><a href="http://osteocoder.com/osteosort.html", target="_blank">OsteoShiny</a></td>
               <td>R</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Commingled</td>
           </tr>
        <tr>
-              <td>OsteoSort</td>
+           <td><a href="http://osteocoder.com/osteosort.html", target="_blank">OsteoSort</a></td>
               <td>R, Julia, VB</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Commingled</td>
           </tr>
        <tr>
-              <td>Osteoware</td>
+           <td><a href="https://osteoware.si.edu/", target="_blank">Osteoware</a></td>
               <td>Delphi</td>
               <td>Closed</td>
               <td>EULA</td>
               <td>Data Analysis</td>
           </tr>
        <tr>
-              <td>PerspectiveX</td>
+              <td><a href="http://www.craniofacialidentification.com/computercode.html", target="_blank">PerspectiveX</a></td>
               <td>R</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Craniofacial</td>
           </tr>
        <tr>
-              <td>QA3D</td>
+           <td><a href="http://osteocoder.com/QA3D.html", target="_blank">QA3D</a></td>
               <td>R, Julia, VB</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Data Analysis</td>
           </tr>
        <tr>
-              <td>QuickCapture</td>
+              <td><a href="http://www.craniofacialidentification.com/computercode.html", target="_blank">QuickCapture</a></td>
               <td>R</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Data Analysis</td>
           </tr>
        <tr>
-              <td>rASUDAS</td>
+           <td><a href="http://osteomics.com/", target="_blank">rASUDAS</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Ancestry</td>
           </tr>
        <tr>
-              <td>Raxter</td>
+           <td><a href="http://osteomics.com/", target="_blank">Raxter</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Body Proportion</td>
           </tr>
        <tr>
-              <td>RDFBones</td>
+           <td><a href="https://github.com/RDFBones", target="_blank">RDFBones</a></td>
               <td>OWL</td>
               <td>Open</td>
               <td>BSD</td>
@@ -321,84 +321,84 @@
               <td>Craniofacial</td>
           </tr>
        <tr>
-              <td>SeuPF</td>
+           <td><a href="http://osteomics.com/", target="_blank">SeuPF</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Sex</td>
           </tr>
        <tr>
-              <td>Skelet-o-matic</td>
+              <td><a href="http://www.craniofacialidentification.com/computercode.html", target="_blank">Skelet-o-matic</a></td>
               <td>VBA</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Data Analysis</td>
           </tr>
        <tr>
-              <td>SkullProfiler</td>
+              <td><a href="http://www.craniofacialidentification.com/computercode.html", target="_blank">SkullProfiler</a></td>
               <td>R</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Ancestry, Sex</td>
           </tr>
        <tr>
-              <td>SkullXtremes</td>
+              <td><a href="http://www.craniofacialidentification.com/computercode.html", target="_blank">SkullXtremes</a></td>
               <td>R</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Ancestry, Sex</td>
           </tr>
        <tr>
-              <td>SPINNE</td>
+           <td><a href="http://osteomics.com/", target="_blank">SPINNE</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Body Proportion</td>
           </tr>
        <tr>
-              <td>SSAGE</td>
+           <td><a href="http://osteomics.com/", target="_blank">SSAGE</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
               <td>Age</td>
           </tr>
        <tr>
-              <td>TDStats</td>
+              <td><a href="http://www.craniofacialidentification.com/computercode.html", target="_blank">TDStats</a></td>
               <td>R</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Craniofacial</td>
           </tr>
        <tr>
-              <td>TraumaVision</td>
+              <td><a href="http://www.craniofacialidentification.com/computercode.html", target="_blank">TraumaVision</a></td>
               <td>R</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Data Analysis</td>
           </tr>
        <tr>
-              <td>WebFAIS</td>
+              <td><a href="http://bluebell.ddns.comp.nus.edu.sg/~skullrecon/", target="_blank">WebFAIS</a></td>
               <td>C++</td>
               <td>Closed</td>
               <td>EULA</td>
               <td>Craniofacial</td>
           </tr>
        <tr>
-              <td>ZTM</td>
+           <td><a href="https://github.com/jjlynch2/z-transform-method", target="_blank">ZTM</a></td>
               <td>C++</td>
               <td>Open</td>
               <td>MIT</td>
               <td>Commingled</td>
           </tr>
        <tr>
-              <td>3D-ID</td>
+           <td><a href="http://www.3d-id.org", target="_blank">3D-ID</a></td>
               <td>Java</td>
               <td>Closed</td>
               <td>EULA</td>
               <td>Ancestry, Sex</td>
           </tr>
        <tr>
-              <td>3Skull</td>
+              <td><a href="http://math.mercyhurst.edu/~sousley/Software/", target="_blank">3Skull</a></td>
               <td>Delphi</td>
               <td>Closed</td>
               <td>EULA</td>
