--- a/MSPS.html
+++ b/MSPS.html
@@ -53,32 +53,16 @@
             version: Under Development</p><div><br></div>
         <div class="row">
             <div class="col-md-6">
-                <h5>Technical Requirements:</h5><font size="1"><ol>
-    <li type="square"><p style="margin:2px">Linux, macOS, or Windows 7/8/10</p></li>
-    <li type="square"><p style="margin:2px">R version >= 3.3.0</p></li>
-    <li type="square"><p style="margin:2px">Julia version >= 1.0.0</p></li>
-   <li type="square"><p style="margin:2px">Recommended > 8 gigabytes of RAM</p></li>
-    </font></ol></div>
+                <h5>Technical Requirements:</h5>
+            </div>
             <div class="col-md-6">
-                <h5>Installation from R:</h5><div style="background-color:lightgrey;width:100%;border-style:dashed;border-width:1px">   
-<font size="1">
-    <span style="margin:2px;color:#2a7bb6">library(devtools)<br>
-        install.github("jjlynch2/MSPS", ref="v0.0.1")<br>
-        library(MSPS)<br>
-       MSPS()
-    </span></font></div><br><br></div>
+                <h5>Installation from R:</h5>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <h5>R Dependencies:</h5><font size="1"><ol>
-   <li type="square"><p style="margin:2px">DT</p></li>
-    <li type="square"><p style="margin:2px">shiny</p></li>
-    <li type="square"><p style="margin:2px">htmltools</p></li>
-    <li type="square"><p style="margin:2px">zip</p></li>
-    <li type="square"><p style="margin:2px">rgl</p></li>
-    <li type="square"><p style="margin:2px">rmarkdown</p></li>
-    <li type="square"><p style="margin:2px">knitr</p></li>
-    </font></ol><br><br></div>
+                <h5>R Dependencies:</h5>
+            </div>
             <div class="col-md-6"></div>
         </div>
     </div>
