--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 legacy version of the OsteoSort live tool (version 1.2.6) is still available under 'Tools' in the navbar. This will be updated with 1.3.0 when the new version is released.</p><div><br><br></div>
             <h4>The Open Source Standard</h4>
             <p>This website and all projects therein are developed with an open source standard to meet ISO 17205 requirements for usability within a legal context. This includes full and open disclosure of all source code to aid with future auditing and
-                traceability, complete version control and archiving of all versions, and full transparency in tracking any bugs or errors that are identified.</p><div><br><br></div>
+                traceability, complete version control and archiving of all versions, and full transparency in tracking any bugs or errors that are identified. For a comprehensive list of open source licenses see&nbsp;<a href="https://opensource.org/licenses">https://opensource.org/licenses</a>.</p><div><br><br></div>
             <h4>Associated Publications</h4>
             <p>Lynch JJ, Byrd JE, LeGarde CB. The Power of Exclusion using Automated Osteometric Sorting: Pair-matching. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13560">https://doi.org/10.1111/1556-4029.13560</a><br>&nbsp;&nbsp;<br>Lynch
                 JJ. An Analysis on the Choice of Alpha Level in the Osteometric Pair-matching of the Os Coxa, Scapula, and Clavicle. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13599">https://doi.org/10.1111/1556-4029.13599</a><br>&nbsp;&nbsp;<br>Lynch
