--- a/tools.html
+++ b/tools.html
@@ -69,7 +69,7 @@
               <td>Age</td>
           </tr>
        <tr>
-              <td><a href="http://projects.pacea.u-bordeaux.fr/TIVMI/index.php?page=afa3d", target="_blank">AFA3D</a></td>
+              <td><a href="http://projets.pacea.u-bordeaux.fr/TIVMI/index.php?page=afa3d", target="_blank">AFA3D</a></td>
               <td>R, C++</td>
               <td>Closed</td>
               <td>EULA</td>
@@ -146,7 +146,7 @@
               <td>Sex</td>
           </tr>
        <tr>
-              <td><a href="http://projects.pacea.u-bordeaux.fr/logiciel/DSP2/dsp2.html", target="_blank">DSP2</a></td>
+              <td><a href="http://projets.pacea.u-bordeaux.fr/logiciel/DSP2/dsp2.html", target="_blank">DSP2</a></td>
               <td>R</td>
               <td>Closed</td>
               <td>None</td>
