--- a/QA3D.html
+++ b/QA3D.html
@@ -51,7 +51,7 @@
         <h4>QA3D</h4>
         <p>QA3D (Quality Assurance 3D) is an R package that allows the error analysis of repeated scans from three-dimensional equipment. While not requiring the use of skeletal elements, this app was designed and intended to be used with repeated skeletal
             element scans. Given the rise in popularity of three-dimensional technology in forensic anthropology, there is a need for an FA specific tool to verify the quality of scanners for research and laboratory accreditation purposes.<br><br>Current
-            version: 0.0.2</p><div><br></div>
+            version: 0.0.3</p><div><br></div>
         <div class="row">
             <div class="col-md-6">
                 <h5>Technical Requirements:</h5><font size="1"><ol>
@@ -87,6 +87,7 @@
     <li type="square"><p style="margin:2px">JuliaCall</p></li>
     <li type="square"><p style="margin:2px">rmarkdown</p></li>
     <li type="square"><p style="margin:2px">knitr</p></li>
+    <li type="square"><p style="margin:2px">Rvcg</p></li>
     </font></ol><br><br></div>
         </div>
     </div>
