FA tools update

--- a/tools.html
+++ b/tools.html
@@ -404,6 +404,13 @@
               <td>EULA</td>
               <td>Data Analysis</td>
           </tr>
+           <tr>
+              <td><a href="https://github.com/jcaple18/MSPS", target="_blank">MSPS</a></td>
+              <td>R</td>
+              <td>Open</td>
+              <td>GPLv2</td>
+              <td>Age</td>
+          </tr>
 </tbody>
    </table><div><br><br></div></div>
     <div class="col-md-12 col-xl-10 offset-xl-1"
