--- a/tools.html
+++ b/tools.html
@@ -49,7 +49,8 @@
     </div>
     <div class="col-auto col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
         <h4>Forensic Anthropology Tools</h4>
-        <p>This table is a compilation of software tools in forensic anthropology and their associated attributes. If you wish to contribute or update any information, please email jjlynch [at] osteocoder [dot] com.</p>
+        <p>This table is a compilation of software tools in forensic anthropology and their associated attributes. If you wish to contribute or update any information, please email jjlynch [at] osteocoder [dot] com. For more information about computational
+            tools in forensic anthropology see&nbsp;<a href="http://dx.doi.org/10.5744/fa.2018.0025" target="_blank">http://dx.doi.org/10.5744/fa.2018.0025</a>.</p>
         <p>Last Updated: 1 June 2019<br>Download:&nbsp;<a href="FA_tools.csv" target="_blank">CSV</a></p><div><br><br></div><table id="example" class="table compact table-striped table-hover" style="width:100%">
 <thead>
        <tr>
